# NovaSpine

./: .dockerignore  .gitignore  Dockerfile  HANDOFF-MVP.md  MANIFEST.in  OPENCLAW_COMPATIBILITY.md  README.md  pyproject.toml  tsconfig.openclaw-plugin.json
docs/: memory-roadmap-2026.md
examples/: memory_manager.env.example
scripts/: backfill-embeddings.py  bench_usc_efficiency.py  install-openclaw-local.sh  nova-compress-watcher.py  prepare_official_benchmarks.py  run_memory_benchmarks.py  run_memory_qa.py  train_memory_policy.py  train_memory_policy_rl.py  train_memory_reranker.py
tests/: conftest.py  test_api_auth.py  test_api_auth_and_config.py  test_cli_doctor.py  test_cli_recall.py  test_embedding_backends.py  test_embedding_cache.py  test_embedding_factory.py  test_episodic_expansion.py  test_fact_extractor.py  test_faiss_dimension_guard.py  test_faiss_store.py  test_graph_consolidation_manager.py  test_index_consistency_doctor.py  test_llm_openai_backend.py  test_memory_answer_normalizer.py  test_memory_answer_reader.py  test_memory_answer_verifier.py  test_memory_failure_taxonomy.py  test_memory_manager_llm_policy.py  test_memory_qa_metrics.py  test_memory_spine_facts.py  test_memory_write_admission.py  test_openclaw_patcher.py  test_prepare_official_benchmarks.py  test_retrieval_chained.py  test_retrieval_cross_encoder.py  test_retrieval_planner.py  test_retrieval_trace_features.py  test_retrieval_verify.py  test_rlm_reader_claims.py  test_run_memory_qa_helpers.py  test_session_ingest_and_cli.py  test_session_parser_generic_jsonl.py  test_sqlite_wal.py  (+8 more)
(+263 files in other folders)
