[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novaspine"
version = "0.3.0"
description = "NovaSpine — long-term memory for LLM agents with hybrid vector + keyword search"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # USC core
    "zstandard>=0.21",
    "drain3>=0.9.11",
    # C3/Ae core
    "faiss-cpu>=1.9.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "orjson>=3.10.0",
    # Cogdedup
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "respx>=0.22.0",
]
semantic = ["scikit-learn>=1.3"]
crypto = ["cryptography>=41"]

[project.scripts]
novaspine = "c3ae.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
